fix: Modified my models, services and controllers for my routes to fix all errors encountered while testing. Added an additional route for re-sending of links.
